# fio-matrix

./: Cargo.toml  default.nix  flake.nix
src/: command.rs  config.rs  logging.rs  main.rs
