[package]
name = "fio-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
figment = { version = "0.10.14", features = ["toml"] }
glob = "0.3.1"
indicatif = "0.17.8"
itertools = "0.12.1"
libflate = "2.0.0"
log = "0.4.21"
log4rs = "1.3.0"
names = { version = "0.14.0", default-features = false }
reqwest = { version = "0.12.0", features = ["blocking"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
tap = "1.0.1"
tar = "0.4.40"
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.5.0"
